--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4547,6 +4547,7 @@ input[type=button].btn-block {
   font-size: 1.125rem;
   line-height: inherit;
   white-space: nowrap;
+  height: 4rem;
 }
 
 .navbar-brand:hover,
