--- a/public/css/app.css
+++ b/public/css/app.css
@@ -175,6 +175,14 @@ a {
   background-color: transparent;
 }
 
+#clock {
+  color: #e94606;
+  text-decoration: none;
+  background-color: transparent;
+  padding-left: 45%;
+  width: 100%;
+}
+
 a:hover {
   color: #1d68a7;
   text-decoration: underline;
@@ -2197,12 +2205,12 @@ pre code {
 
 .form-control {
   display: block;
-  width: 100%;
-  height: calc(1.6em + 0.75rem + 2px);
-  padding: 0.375rem 0.75rem;
+  width: 90%;
+  height: 5rem;
+  padding: 0.70rem 0.75rem;
   font-size: 0.9rem;
   font-weight: 400;
-  line-height: 1.6;
+  line-height: 1.1;
   color: #495057;
   background-color: #fff;
   background-clip: padding-box;
@@ -2344,8 +2352,7 @@ textarea.form-control {
 }
 
 .form-group {
-  margin-bottom: 0.5rem;
-  
+  margin-bottom: 0.05rem;
 }
 
 .form-text {
@@ -2709,7 +2716,7 @@ textarea.form-control.is-invalid {
           user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.375rem 1.25rem;
+  padding: 0.35rem 1.25rem;
   font-size: 0.9rem;
   line-height: 1.6;
   border-radius: 0.25rem;
@@ -3393,10 +3400,12 @@ fieldset:disabled a.btn {
 
 .btn-sm,
 .btn-group-sm > .btn {
-  padding: 0.25rem 0.5rem;
+  margin-top: 15px;
+  padding: 0.3rem 1.1rem;
   font-size: 0.7875rem;
   line-height: 1.5;
   border-radius: 0.2rem;
+  width: 100%;
 }
 
 .btn-block {
