--- a/public/css/app.css
+++ b/public/css/app.css
@@ -219,6 +219,8 @@ figure {
 img {
   vertical-align: middle;
   border-style: none;
+  height: auto;
+  max-width: 100%;
 }
 
 svg {
@@ -521,7 +523,8 @@ mark,
 .img-thumbnail {
   background-color: #ffffff;
   border-radius: 0.25rem;
-  max-width: 50%;
+  min-width: 60px;
+  max-width: 100%;
   height: auto;
 }
 
@@ -5020,12 +5023,14 @@ input[type=button].btn-block {
   display: flex;
   flex-direction: column;
   min-width: 0;
+  max-width: 350px;
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 2px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
   margin-right: 15px;
+  min-height: 80px;
 }
 
 .card > hr {
@@ -5046,7 +5051,7 @@ input[type=button].btn-block {
 .card-body {
   flex: 1 1 auto;
   min-height: 1px;
-  padding: 0.5rem;
+  margin: 25%;
 }
 
 .card-title {
@@ -5071,7 +5076,6 @@ input[type=button].btn-block {
 }
 
 .card-header {
-  padding: 0.02rem 0.5rem;
   margin-bottom: 0;
   background-color: rgba(0, 0, 0, 0.03);
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
@@ -5086,7 +5090,6 @@ input[type=button].btn-block {
 }
 
 .card-footer {
-  padding: 0.1rem 0.75rem;
   background-color: rgba(0, 0, 0, 0.03);
   border-top: 1px solid rgba(0, 0, 0, 0.125);
 }
